--- a/src/Homepage/homePage.css
+++ b/src/Homepage/homePage.css
@@ -4,23 +4,22 @@
   text-decoration: none !important;
   list-style-type: none !important;
 }
-.contain {
+.contain__homepage {
   padding-top: 50px !important;
   padding-bottom: 100px !important;
+  min-height: 350px;
+  border-radius: 0px !important;
+  width: 100% !important;
 }
-.card1 {
+.card1__homepage {
   margin-top: -150px;
 }
 a {
   color: #f3001f;
 }
-.content {
-  width: 100%;
+.content__homepage {
+  width: 100% !important;
 }
-.contain {
-  min-height: 350px;
-  border-radius: 0px !important;
-}
-.qr {
-  margin-right: 0;
+img {
+  min-width: 10px;
 }
