--- a/src/Login/loginScreen.css
+++ b/src/Login/loginScreen.css
@@ -1,197 +1,105 @@
-
-  /* devices (landscape phones, 576px and up) */
-  @media (min-width: 576px) {
-    .input-container {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-    }
-  }
-  
-  /* // Medium devices (tablets, 768px and up) */
-  @media (min-width: 768px) {
-  }
-  
-  /* // Large devices (desktops, 992px and up) */
-  @media (min-width: 992px) {
-  }
-  
-  /* // Extra large devices (large desktops, 1200px and up) */
-  @media (min-width: 1200px) {
-  }
-  *,
-  body {
-    font-family: "Product Sans";
-    margin: 0;
-    padding: 0;
-    text-decoration: none !important;
-    list-style-type: none !important;
-  }
- 
-  .contain {
-    border-radius: 24px !important;
-    width: 360px;
+/* devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+  .input-container {
     display: flex;
-    margin: 0 auto;
-    min-height: 640px;
+    flex-direction: row;
+    justify-content: center;
   }
-  .conten {
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    width: 85%;
-  }
-  .conten h1 {
-    font-family: Product Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 29px;
-    color: #1E272E;
-    margin-bottom: 20px; 
-  
-  }
+}
 
-  .conten h2 {
-    font-family: Product Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 17px;
-    color: #1E272E;
-  }
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+}
 
-  .conten h5{
-    font-family: Product Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 23px;
-    text-align: center;
-    color: #292D32;
-      }
-  .conten h3{
-    font-family: Product Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 18px;
-    text-align: center;
-    color: #747D8C;
-  }
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+}
 
-  .conten a{
-    font-family: Product Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 17px;
-    color: #EC2028;
-  }
- 
-  .conten label{
-    font-family: Product Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 17px;
-    color: #1E272E;
-  }
-  .conten .placeholder{
-    font-family: Product Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 17px;
-    color: #1E272E;
-  }
-  .conten .btn1 {
-    
-    align-items: center;
-    width: 100%;
-    height: 42px;
-    background: #E4E5EA;
-    border:none;
-    font-family: Google Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 18px;
-    color: #747D8C;
-  }
-  .conten .btn1:hover {
-    align-items: center;
-    width: 100%;
-    height: 42px;
-    background: #EC2028;
-    font-family: Google Sans;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 18px;
-    color: #FFFFFF;
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+}
+*,
+body {
+  font-family: "Product Sans";
+  margin: 0;
+  padding: 0;
+  text-decoration: none !important;
+  list-style-type: none !important;
+}
 
-  }
-  .conten .btn_4{
-    font-family: Google Sans;
-    width: auto;
-    font-style: normal;
-    font-weight: bold;
-    color: #3B5998;
-    align-items: center;
-   width: 100%;
-   height: 10px;
-    background: #FFFFFF;
-    border: 1px solid #3B5998;
-    box-sizing: border-box;
-    border-radius: 4px;
-  }
+.contain {
+  border-radius: 24px !important;
+  width: 360px;
+  display: flex;
+  margin: 0 auto;
+  min-height: 640px;
+}
+.conten {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  width: 85%;
+}
+.conten h1 {
+  font-family: Product Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 29px;
+  color: #1e272e;
+  margin-bottom: 20px;
+}
 
-  .conten .btn_5{
-    font-family: Product Sans;
-    font-style: normal;
-    font-weight: bold;
-    color: #747D8C;
-    align-items: center;
-    background: #FFFFFF;
-    border: 1px solid #1DA1F2;
-    box-sizing: border-box;
-    border-radius: 4px;
+.conten h2 {
+  font-family: Product Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #1e272e;
+}
 
-  }
+.conten h5 {
+  font-family: Product Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 23px;
+  text-align: center;
+  color: #292d32;
+}
+.conten h3 {
+  font-family: Product Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: center;
+  color: #747d8c;
+}
 
-  .conten .dngr{
-    font-family: Product Sans;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 17px;
-    color: #798188;
-    width: 100%;
-    background: rgba(243, 0, 31, 0.1);
-    border-radius: 4px;
-  }
-
-  .mobile-text {
-    color: #989696b8;
-    font-size: 15px;
-  }
-  
- .card{
-     border: none;
- }
-  
-  .form-control-verification:focus {
-    color: #495057;
-    background-color: #fff;
-    border-color: #ec2028;
-    outline: 0;
-    box-shadow: none;
-  }
-  .input-container input {
-    width: 50px;
-    height: 50px;
-  }
-
-  
-  
+.conten label {
+  font-family: Product Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 17px;
+  color: #1e272e;
+}
+.conten .placeholder {
+  font-family: Product Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  color: #1e272e;
+}
+.mobile-text {
+  color: #989696b8;
+  font-size: 15px;
+}
+.img__login {
+  border: 1px #1da1f2 solid;
+  padding: 10px 15px;
+  border-radius: 4px;
+}
